# POPS-MANAGER-FOR-ANDROID-

./: README.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/popsmanager/: MainActivity.kt
app/src/main/java/com/popsmanager/converter/: Cue2PopsConverter.kt  Vcd2BinCueConverter.kt  VcdExtractor.kt
app/src/main/java/com/popsmanager/data/: CoverArtFetcher.kt  GameModels.kt  GameRepository.kt  TitleDatabase.kt
app/src/main/java/com/popsmanager/popstarter/: PopstarterInstaller.kt
app/src/main/java/com/popsmanager/ui/: LibraryViewModel.kt
app/src/main/java/com/popsmanager/ui/theme/: Theme.kt
app/src/main/java/com/popsmanager/util/: GameIdUtil.kt  Image formatter.kt  Ps1IdReader.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
